--- a/Content/css/style.css
+++ b/Content/css/style.css
@@ -13,3 +13,12 @@
     font-weight: bold; /* Pour mettre en gras le texte */
     display: inline-block; /* Permet au badge d'occuper seulement l'espace nécessaire */
 }
+.user-badge{
+    background-color: #73f3ea; 
+    color: #fff; 
+    border-radius: 50%;
+    padding: 8px 15px; 
+    margin-right: 10px;
+    font-weight: bold; 
+    display: inline-block;
+}
